# HS-Niederrhein-Informatik-Bachelor

./: .gitignore  CMakeLists.txt  README.md
S1/Digitaltechnik und Rechnerorganisation 1/: INHALT.md
S1/Mathematik 1/: INHALT.md
S2/ALD/: README.md
S2/ALD/U13-EditDistance/: CMakeLists.txt  MergeSort.h  main.cpp
S2/ALD/U2-DLinkedList/: CMakeLists.txt  DLinkedList.cpp  DLinkedList.h  DLinkedValue.cpp  DLinkedValue.h  main.cpp
S2/ALD/U3-SearchTree/: CMakeLists.txt  Node.h  SearchTree.h  main.cpp
S2/ALD/U4-5-BigO/: CMakeLists.txt  Complexity.cpp  Complexity.h  GrowSpeed.h
S2/ALD/U6-QuickSort/: CMakeLists.txt  QuickSort.h  main.cpp
S2/ALD/U7-MergeSort/: CMakeLists.txt  MergeSort.h  main.cpp
S2/BSY/: A7.md  README.md
S2/BSY/Exam/: .gitignore  CMakeLists.txt  README.md  build-script.sh  main.c  my-utils.h  start.bat  time-utils.h
S2/DR2/: README.md
S2/DR2-P/: A3_exp1.asm  A3_exp2.asm  a3.md  a3_e1.asm  a3_e2.asm  a3_t1.asm  a3_t2.asm  a3_tagesaufgabe_1_und_2.asm
S2/MAT2/: README.md
S2/PE2/: README.md
S2/PE2/U1-Modular-Programming/: CMakeLists.txt  liste.c  liste.h  main.c  maths.c  maths.h  sort.c  sort.h  stack.c  stack.h
S2/PE2/U10-Iterators/: CMakeLists.txt  coollist.cpp  coollist.h  main.cpp
S2/PE2/U3-C++Classes/: CMakeLists.txt  Converter.cpp  Converter.h  Stack.cpp  Stack.h  main.cpp
S2/PE2/U4-Mandelbrot/: CMakeLists.txt  Complex.cpp  Complex.h  main.cpp
S2/PE2/U4-Streams/: CMakeLists.txt  Sale.cpp  Sale.h  main.cpp
S2/PE2/U5-Overloading/: CMakeLists.txt  main.cpp  vec2.cpp  vec2.h
S3/BVA/: CMakeLists.txt  P1  README.md  camera.h  cmake_install.cmake  histogram.h  install-dep.sh  main.cpp  run.sh
S3/DNE/: P2.md  configure.ttl  configure_p3.ttl  test.bat  test_p3.bat
S3/WEB/: README.md  civicrm-installer.sh  install.sh  uninstall.sh  wordpress-installer.sh
(+22 files in other folders)
